# CacheSimulator

./: .gitignore  CMakeLists.txt  CacheSimulator  README.txt  StatisticInspector.ipynb  TraceInspector.ipynb  config.config  default.config  default_config.config
.ipynb_checkpoints/: StatisticInspector-checkpoint.ipynb  TraceInspector-checkpoint.ipynb
logs/: AVG_scores.csv
output/: CMakeCache.txt  Makefile  cmake_install.cmake
src/: cache.c  cache.h  cache_level.c  cache_set.c  cache_set.h  cache_simulator.c  cache_simulator.h  cashe_level.h  common.c  common.h  config_parser.c  config_parser.h  ddr.c  ddr.h  ddr_bank.c  ddr_bank.h  ddr_channel.c  ddr_channel.h  ddr_dimm.h  ddr_rank.h  ddr_simulator.c  ddr_simulator.h  defines.h  loger.c  loger.h  main.c  parser.c  parser.h  test_runner.c  test_runner.h
src/cache/: cache.c  cache.h  cache_level.c  cache_set.c  cache_set.h  cashe_level.h
src/config_parser/: config_parser.c  config_parser.h
src/loger/: loger.h
traces/: TraceParser  TraceParser.c
